add melange support

--- a/ppx_deriving.opam
+++ b/ppx_deriving.opam
@@ -14,8 +14,9 @@ build: [
   ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
 ]
 depends: [
-  "ocaml" {>= "4.05.0"}
-  "dune" {>= "1.6.3"}
+  "ocaml" {>= "5.1.0"}
+  "melange"
+  "dune" {>= "3.8.0"}
   "cppo" {build}
   "ocamlfind"
   "ppx_derivers"
