--- a/src/runtime/dune
+++ b/src/runtime/dune
@@ -3,7 +3,8 @@
  (public_name ppx_deriving.runtime)
  (wrapped false)
  (synopsis "Type-driven code generation")
- (libraries result))
+ (libraries result)
+ (modes :standard melange))
 
 (rule
  (deps ppx_deriving_runtime.cppo.ml)
