--- a/dune
+++ b/dune
@@ -2,4 +2,4 @@
  (_
   (flags :standard -w -27-9))) ; TODO: Use the full standard flags
 
-(dirs :standard \ src_examples src_test)
+(dirs :standard \ src_test)
